syntax = "proto3";

package auth;

import "types.proto";
import "google/protobuf/timestamp.proto";
option go_package = "ms.api/protos/pb/auth";

message SignupRequest {
  CustomerInput customer_input = 1;
  types.DeviceInput device = 2;
}

message CustomerInput {
  string phone = 1;
  string email = 2;
  string login_password = 3;
}

message TokenPairResponse {
  string auth_token = 1;
  string refresh_token = 2;
}

message LoginRequest {
  CustomerInput customer_input = 1;
  types.DeviceInput device = 2;
}

message RefreshTokenRequest {
  string token = 1;
}

message StaffLoginRequest {
  string token = 1;
  enum AuthType {
    GOOGLE = 0;
  }
  AuthType auth_type = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool isValid = 1;
  types.JWTClaims claims = 2;
}

service AuthService {
  rpc Signup(SignupRequest) returns (TokenPairResponse);
  rpc Login(LoginRequest) returns (TokenPairResponse);
  rpc StaffLogin(StaffLoginRequest) returns (TokenPairResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenPairResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}