syntax = "proto3";

package onboarding;
option go_package = "pb/onboardingService";

service OnBoardingService {
    rpc CreatePhone(CreatePhoneRequest) returns(MsgResponse) {}
    rpc CreatePasscode(CreatePasscodeRequest) returns(MsgResponse) {}
    rpc UpdatePersonBiodata(UpdatePersonRequest) returns (SuccessResponse) {}
    rpc AddReasonsForUsingRoava(RoavaReasonsRequest) returns (SuccessResponse) {}
}

message CreatePhoneRequest {
    string phoneNumber = 1;
    Device device = 2;
}

message Device {
    string os = 1;
    string brand = 2;
    string deviceToken = 3;
    string deviceId = 4;
}

message SuccessResponse {
    string message = 1;
}

message CreatePasscodeRequest {
    string personId = 1;
    string passcode = 2;
}

message MsgResponse {
    string message = 1;
}

message UpdatePersonRequest {
    string personId = 1;
    string address = 2;
    string firstName =3;
    string lastName =4;
    string dob = 5;
}

message RoavaReasonsRequest {
    string personId = 1;
    string reasons = 2;
}